--- a/Frontend/app/templates/index.html
+++ b/Frontend/app/templates/index.html
@@ -2,16 +2,15 @@
 <html>
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Proyecto#3</title>
+    <title>MisMascotitas</title>
 </head>
 <body>
+    {% include 'navbar.html' %}
 
     <div class="d-flex align-items-center justify-content-center" style="height: 100vh;">
         <div class="container text-center">
-            <h1>Bienvenido a la Tienda Virtual de ITGSA</h1>
-            <p>Industria Típica Guatemalteca, S.A. (ITGSA) ha creado esta tienda virtual para que nuestros clientes puedan adquirir nuestros productos y servicios de manera fácil y conveniente.</p>
-            <p>Una vez que hayas seleccionado los productos y servicios que deseas adquirir, generaremos una factura por el monto total que debes pagar. Puedes realizar pagos a través de la banca en línea de tu banco favorito, y los pagos se trasladarán directamente a las cuentas de ITGSA.</p>
-            <p>Si pagas más de lo que debes, quedarás con un saldo a tu favor, el cual se aplicará automáticamente cuando realices otra compra en el sitio web.</p>
+            <h1>Bienvenido al sistema de registro y control de mascotas de MisMascotitas</h1>
+            <p>En este sistema podrás cargar un archivo XML con los registros de las mascotas y recibir otro XML de respuesta con la información procesada para su fácil lectura.</p>
             <p>Utiliza la barra de navegación de arriba para navegar por la aplicación.</p>
         </div>
     </div>
