--- a/Frontend/app/templates/NavBar.html
+++ b/Frontend/app/templates/NavBar.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" href="{% url 'index'%}">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Borrado de Datos</a>
+                    <a class="nav-link" href="{% url 'clear_animals' %}">Borrado de Datos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'Carga'%}">Cargar Archivo de Registros</a>
