--- a/Frontend/app/templates/NavBar.html
+++ b/Frontend/app/templates/NavBar.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="{% url 'Carga'%}">Cargar Archivo de Registros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{%url 'Revision'%}">Revisión de Datos Procesados</a>
+                    <a class="nav-link" href="{%url 'posts'%}">Revisión de Datos Procesados</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'ayuda'%}">Ayuda</a>
