--- a/Frontend/app/templates/Revision.html
+++ b/Frontend/app/templates/Revision.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Revisión</title>
-</head>
-<body>
-    {% include 'navbar.html' %}
 
-</body>
+<head>
+    <meta charset="UTF-8">
+    <title>Visualización de Animales</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+{% include "NavBar.html" %}
+<body>
+    <div class="container mt-5">
+        <h2 class="text-center">Visualización de Animales</h2>
+        {% for animal in posts %}
+
+        <div class="card mb-3">
+            <div class="card-body text-center">
+                <h5 class="card-title">{{animal.raza}}</h5>
+                <p class="card-text">Tipo: {{animal.tipo}}</p>
+                <p class="card-text">Edad: {{animal.edad}}</p>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+<body>
 </html>
